# iot_gateway

./: .gitignore  .gitmodules  CMakeLists copy.txt  CMakeLists.txt  Makefile  README.md  快捷指令.md
cloud_client/: CMakeLists.txt  main.c
cloud_client/mqtt/: mqtt_client copy.c  mqtt_client copy.h  mqtt_client.c  mqtt_client.h
cmake/: build-paho.cmake
collector/: connector_if.h
collector/protocols/can/: can.c  can_connector.h
common/: CMakeLists.txt
common/log/: log.c  log.h
scripts/: can_simulator.py  config.json
src/: gateway_core.c  main.c
src/net/ble/: bluez_dbus.c
src/net/mqtt/: mqtt_client.c  mqtt_client.h
src/utils/: msg_bus.c  msg_bus.h  uds_bus.c  uds_bus.h
